Minor improvements of editor. Issue persists where newlines sometimes misalign. (Very bad.)

--- a/scss/editor.scss
+++ b/scss/editor.scss
@@ -39,13 +39,14 @@
         }
 
         // Bold the preface/preamble (Swedish: "ingress")
-        .p {
-            font-weight: bold;
+        // FIXME: This doesn't seem to work...
+        // .p {
+        //     font-weight: bold;
 
-            & ~ .p {
-                font-weight: normal;
-            }
-        }
+        //     & ~ .p {
+        //         font-weight: normal;
+        //     }
+        // }
 
         .heading {
             font-weight: bold;
